[package]
name = "rp2040_memory_lcd"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-time = { version = "0.4", features = ["defmt"] }
embassy-rp = { version = "0.4", features = [
    "rp2040",
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.7", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "task-arena-size-32768",
] }
cortex-m-rt = "0.7.5"
portable-atomic = { version = "1.11", features = ["critical-section"] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
memory-lcd-spi = { git = "https://github.com/haobogu/memory-lcd-spi", branch = "feat/add_const_buf_size" }
embedded-graphics-core = { version = "0.4.0", features = ["defmt"] }
embedded-graphics = "0.8"
